node-main/deps/v8/test/message/fail/destructuring-object-private-name.out
*%(basename)s:8: SyntaxError: Unexpected identifier '#x'
    const { #x: x } = this;
            ^^
SyntaxError: Unexpected identifier '#x'
